@@ -14,22 +14,16 @@
 .Ar plugin_uri
 .Sh DESCRIPTION
 .Nm
-prints a human-readable summary of information about an LV2 plugin.
-.Pp
-The plugin must be installed;
-.Nm
-will search for one with the given
-.Ar plugin_uri
-in the LV2 path.
+prints a human-readable summary of information about an installed LV2 plugin.
 .Pp
 The options are as follows:
 .Pp
 .Bl -tag -compact -width 3n
 .It Fl V , Fl Fl version
-Display version information and exit.
+Print version information and exit.
 .Pp
 .It Fl h , Fl Fl help
-Print the command line options.
+Print usage information and exit.
 .Pp
 .It Fl m Ar file
 Add record of plugin to Turtle manifest
