@@ -5,5 +5,5 @@ Checks: >
   -cppcoreguidelines-avoid-non-const-global-variables,
 CheckOptions:
   - key:   readability-function-cognitive-complexity.Threshold
-    value: '42'
+    value: '44'
 InheritParentConfig: true
